# tolgee-mcp

./: .gitignore  README.md  pyproject.toml
openspec/changes/build-tolgee-mcp-server/: design.md  proposal.md  tasks.md
openspec/changes/build-tolgee-mcp-server/specs/export-import-tools/: spec.md
openspec/changes/build-tolgee-mcp-server/specs/key-tools/: spec.md
openspec/changes/build-tolgee-mcp-server/specs/language-tools/: spec.md
openspec/changes/build-tolgee-mcp-server/specs/project-tools/: spec.md
openspec/changes/build-tolgee-mcp-server/specs/server-core/: spec.md
openspec/changes/build-tolgee-mcp-server/specs/tag-namespace-tools/: spec.md
openspec/changes/build-tolgee-mcp-server/specs/translation-tools/: spec.md
src/tolgee_mcp/: __init__.py  __main__.py  client.py  server.py
src/tolgee_mcp/tools/: __init__.py  export_import.py  keys.py  languages.py  projects.py  tags.py  translations.py
